--- a/praj.html
+++ b/praj.html
@@ -11,7 +11,7 @@
     <h2>It's Musical</h2>
     <div class="box">
       <div class="imagebox">
-        <img src="./gitar.jpg" alt="Guitar" />
+        <img src="D:\vishwajeet FSD\Project\Resources\Gitar.jpg" alt="Guitar" />
       </div>
 
       <div class="content">
